// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateWidgetSchema should match the validation result for incorrect data - missing config 1`] = `
{
  "errors": [
    {
      "dataPath": "",
      "keyword": "additionalProperties",
      "message": "should NOT have additional properties",
      "params": {
        "additionalProperty": "id",
      },
      "schemaPath": "#/additionalProperties",
    },
  ],
  "valid": false,
}
`;

exports[`CreateWidgetSchema should match the validation result for valid data 1`] = `
{
  "errors": [
    {
      "dataPath": "",
      "keyword": "additionalProperties",
      "message": "should NOT have additional properties",
      "params": {
        "additionalProperty": "version",
      },
      "schemaPath": "#/additionalProperties",
    },
  ],
  "valid": false,
}
`;

exports[`EditWidgetSchema should match the validation result for incorrect data - missing config 1`] = `
{
  "errors": [
    {
      "dataPath": "",
      "keyword": "required",
      "message": "should have required property 'widgetProps'",
      "params": {
        "missingProperty": "widgetProps",
      },
      "schemaPath": "#/required",
    },
  ],
  "valid": false,
}
`;

exports[`EditWidgetSchema should match the validation result for incorrect data - missing widgetProps 1`] = `
{
  "errors": [
    {
      "dataPath": "",
      "keyword": "required",
      "message": "should have required property 'widgetProps'",
      "params": {
        "missingProperty": "widgetProps",
      },
      "schemaPath": "#/required",
    },
  ],
  "valid": false,
}
`;

exports[`EditWidgetSchema should match the validation result for incorrect data 1`] = `
{
  "errors": [
    {
      "dataPath": "",
      "keyword": "required",
      "message": "should have required property 'widgetProps'",
      "params": {
        "missingProperty": "widgetProps",
      },
      "schemaPath": "#/required",
    },
  ],
  "valid": false,
}
`;

exports[`EditWidgetSchema should match the validation result for valid data 1`] = `
{
  "errors": [
    {
      "dataPath": "",
      "keyword": "required",
      "message": "should have required property 'widgetProps'",
      "params": {
        "missingProperty": "widgetProps",
      },
      "schemaPath": "#/required",
    },
  ],
  "valid": false,
}
`;
